SVN
-------------------------------

Gen:   Resolved issue CASTOR-1882 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with IDREF validation with 'forward references'.
       Details: http://jira.codehaus.org/browse/CASTOR-1882
       (Werner - 20070223)

Gen:   Resolved issue CASTOR-1877 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with build scripts (Windows) related to blanks as part of ENV variables.
       Details: http://jira.codehaus.org/browse/CASTOR-1877
       (Werner - 20070223)

XML:   Resolved issue CASTOR-1879 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added 'setClass(Class)' method to Unmarshaller to allow sepecification of an 'expected' class.
       Details: http://jira.codehaus.org/browse/CASTOR-1879
       (Werner - 20070223)

JDO:   Resolved issue CASTOR-1875 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new command line parameter 'nameConflictStrategy' to SourceGeneratorMain.
       Details: http://jira.codehaus.org/browse/CASTOR-1875
       (Ralf - 20070221)
       
JDO:   Resolved issue CASTOR-1787 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added ant task for DDL generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1787
       (Ralf - 20070218)

XML:   Resolved issue CASTOR-1869 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed problem with identifying 'identity' field in the context of extension hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1869
       (Werner - 20070219)

JDO:   Resolved issue CASTOR-1873 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Moved Performance Test Framework of Castor Persistence to its own module.
       Details: http://jira.codehaus.org/browse/CASTOR-1873
       (Ralf - 20070218)
